# fairy-v3/contracts/openapi.json
@@ -553,6 +553,21 @@
         "title": "AssistantTurnRunInput",
         "type": "object"
       },
+      "AssistantTurnStartInput": {
+        "additionalProperties": false,
+        "properties": {
+          "turn_id": {
+            "format": "uuid",
+            "title": "Turn Id",
+            "type": "string"
+          }
+        },
+        "required": [
+          "turn_id"
+        ],
+        "title": "AssistantTurnStartInput",
+        "type": "object"
+      },
       "AssistantTurnStatus": {
         "enum": [
           "created",
@@ -7130,6 +7145,77 @@
           }
         ],
         "summary": "Run Assistant Turn"
+      }
+    },
+    "/v1/assistant/turns/{turn_id}/start": {
+      "post": {
+        "operationId": "assistant.turns.start",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "turn_id",
+            "required": true,
+            "schema": {
+              "format": "uuid",
+              "title": "Turn Id",
+              "type": "string"
+            }
+          },
+          {
+            "in": "header",
+            "name": "X-Fairy-Device-ID",
+            "required": false,
+            "schema": {
+              "anyOf": [
+                {
+                  "type": "string"
+                },
+                {
+                  "type": "null"
+                }
+              ],
+              "title": "X-Fairy-Device-Id"
+            }
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/AssistantTurnStartInput"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/AssistantTurnModel"
+                }
+              }
+            },
+            "description": "Successful Response"
+          },
+          "422": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/HTTPValidationError"
+                }
+              }
+            },
+            "description": "Validation Error"
+          }
+        },
+        "security": [
+          {
+            "HTTPBearer": []
+          }
+        ],
+        "summary": "Start Assistant Turn"
       }
     },
     "/v1/capabilities": {
